--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RpgReturn</title>
+  <title>YAOOP - THE RETURN</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body>  
+  <%= render '/layouts/header' %>
+  <% if !flash.empty? %>
+    <div id="container">
+      <% flash.each do |key, value| %>
+        <h1><div class="alert alert-<%= key %>"><%= value %></div></h1>
+      <% end %>
+    </div>
+  <% end %>
 
-<%= yield %>
+  <div id="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
