--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>  
   <%= render '/layouts/header' %>
+
   <% if !flash.empty? %>
     <div id="container">
       <% flash.each do |key, value| %>
@@ -16,6 +17,9 @@
     </div>
   <% end %>
 
+  <%= render '/layouts/sidebar' %>
+
+  
   <div id="container">
     <%= yield %>
   </div>
