--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,7 @@ p {
 #logo {
   float: left;
   margin-right: 10px;
-  font-size: 2.0em;
+  font-size: 3.0em;
   color: black;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -107,12 +107,27 @@ footer {
 /* forms */
 
 input, textarea, select, .uneditable-input {
-  border: 3px solid #bbb;
-  width: 45%;
-  margin-bottom: 15px;
+  border: 2px solid #D5C0C0;
+  width: 30%;
+  margin-bottom: 30px;
   @include box_sizing;
 }
 
 input {
   height: auto !important;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
 }
