--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 
   <% if !flash.empty? %>
     <div id="container">
-      <% flash.each do |key, value| %>
-        <h1><div class="alert alert-<%= key %>"><%= value %></div></h1>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
     </div>
   <% end %>
