--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,6 @@
 <center>
   <%= form_for(@user) do |f| %>
     <%= render 'fields', f: f %>
-    <%= f.submit "Done!", class: "button success round large" %>
+    <%= f.submit "Done!", class: "btn btn-primary" %>
   <% end %>
 </center>
