--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Log in", signin_path %></li>
+        <li><%= link_to "Sign in", signin_path %></li>
         <li><%= link_to "Sign Up", signup_path %></li>
       </ul>
     </nav>
