--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,15 @@
     <%= link_to "YAOOP - THE RETURN", root_path , id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        <% if signed_in? %>
+          <li><%= link_to "Sign Out", '#' %></li>
+
+        <% else %>
+          <li><%= link_to "Sign in", signin_path %></li>
+          <li><%= link_to "Sign Up", signup_path %></li>
+        <% end %>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Sign in", signin_path %></li>
-        <li><%= link_to "Sign Up", signup_path %></li>
       </ul>
     </nav>
   </div>
