--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,17 @@
 <body>  
   <%= render '/layouts/header' %>
 
-  <% if !flash.empty? %>
-    <div id="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
-    </div>
-  <% end %>
 
   <div class="row">
     <div class="col-md-3">
       <%= render '/layouts/sidebar' %>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9">      
+      <% if !flash.empty? %>        
+        <% flash.each do |message_type, message| %>
+          <center><div class="alert alert-<%= message_type %>"><%= message %></div></center>
+        <% end %>        
+      <% end %>
       <%= yield %>
     </div>
   </div>
