--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,3 +144,14 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+.stats {
+  width: 50px;
+  background-color: #D8ADAD;
+}
+
+.stats_container{
+  background-color: #F2E9E9;
+  left: 10px;
+  right: -15px;
+}
