--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -19,10 +19,19 @@
     <center>
       <span class="label label-default"><%= current_user.login %></span>
       <span class="label label-default"><%= current_user.player.exp %></span>
-      <span class="label label-default"><%= current_user.player.damage %></span>
+      <span class="label label-default"><%= image_tag("battered-axe.png", size: "16x16") %> <%= current_user.player.damage %></span>
+      <span class="label label-default"><%= image_tag("gold-bar.png", size: "16x16") %><%= current_user.player.gold %></span>
     </center>
     <br>
   </div>
+
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#"><img alt="Brand" src="/assets/images/gold-bar.png"><%= image_tag("gold-bar.xcf") %></a>
+    </div>
+  </div>
+</nav>
 <% else %>
   <h1>CREATE YOUR CHARACTER</h1>
 <% end -%>
