--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <% if current_user.player.playable? %>
   <div class="stats_container">
     <br>
+    <center><h2><%= current_user.login %></h2></center>
     <div class="row">
       <div class="col-md-3">        
       </div>
@@ -23,16 +24,19 @@
 
     <center>
       <h3>
-      <span class="label label-default"><%= image_tag("battered-axe.png", size: "25x25", title: "Damage") %> <%= current_user.player.damage %></span>
-      <span class="label label-default"><%= image_tag("gold-bar.png", size: "25x25", title: "Gold") %><%= current_user.player.gold %></span>
-      <span class="label label-default"><%= image_tag("round-shield.png", title: "Defense", size: "25x25") %><%= current_user.player.defense %></span>
+      <span class="label label-default"><%= image_tag("battered-axe.png", size: "30x25", title: "Damage") %> <%= current_user.player.damage %></span>
+      <span class="label label-default"><%= image_tag("gold-bar.png", size: "30x25", title: "Gold") %><%= current_user.player.gold %></span>
+      <span class="label label-default"><%= image_tag("round-shield.png", title: "Defense", size: "30x25") %><%= current_user.player.defense %></span>
+      <br>
+      <br>
+      <span class="label label-default"><%= image_tag("dripping-knife.png", title: "Kills", size: "30x25") %><%= "  #{current_user.player.kills}" %></span>
+      <span class="label label-default"><%= image_tag("carrion.png", title: "Deaths", size: "30x25") %><%= "   #{current_user.player.deaths}" %></span>
       <br>
 
       </h3>
     </center>
-    <br>
+    <br>      
   </div>
-
 <% else %>
   <h1>CREATE YOUR CHARACTER</h1>
 <% end -%>
