--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 
 /* mixins, variables, etc. */
 
-$gray-medium-light: #eaeaea;
+$gray-medium-light: #E7E3E3;
   
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -16,6 +16,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 30px;
+  background-color: #E7E6E6;
 }
 
 section {
@@ -52,7 +53,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: $gray-light;
+  color: #E7E3E3;
 }
 
 p {
@@ -67,13 +68,13 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 3.0em;
-  color: black;
+  color: white;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-top: 15px;
   font-weight: bold;
   &:hover {
-    color: #594E4E;
+    color: #DED8D8;
     text-decoration: none;
   }
 }
@@ -83,8 +84,8 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
+  border-top: 1px solid #E7E3E3;
+  color: #E7E3E3;
   a {
     color: $gray;
     &:hover {
@@ -160,6 +161,6 @@ input {
   width: 1000px;
 }
 
-.left{
-  text-align: left;
+.stuff{
+  padding-top: 100px;
 }
