--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,24 +8,26 @@
   </head>
   <body>  
     <%= render '/layouts/header' %>
-    <% if signed_in? && can_play?(current_user) %>
-      <div class="row">
-        <div class="col-md-1">
+    <div class="stuff">
+      <% if signed_in? && can_play?(current_user) %>
+        <div class="row">
+          <div class="col-md-1">
+          </div>
+          <div class="col-md-2">
+            <%= render '/layouts/sidebar' %>
+          </div>
+          <div class="col-md-9">      
+            <% if !flash.empty? %>        
+              <% flash.each do |message_type, message| %>
+                <center><div class="alert alert-<%= message_type %>"><%= message %></div></center>
+              <% end %>        
+            <% end %>
+            <%= yield %>
+          </div>
         </div>
-        <div class="col-md-2">
-          <%= render '/layouts/sidebar' %>
-        </div>
-        <div class="col-md-9">      
-          <% if !flash.empty? %>        
-            <% flash.each do |message_type, message| %>
-              <center><div class="alert alert-<%= message_type %>"><%= message %></div></center>
-            <% end %>        
-          <% end %>
-          <%= yield %>
-        </div>
-      </div>
-    <% else %>
-      <%= yield %>
-    <% end %>
+      <% else %>
+        <%= yield %>
+      <% end %>
+    </div>
   </body>
 </html>
