--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -2,12 +2,17 @@
   Avaible gold: <%= current_user.player.gold %>
 </h1>
 
-<h2>Consumiveis:</h2>
+<h2>Armor:</h2>
+<p><%= link_to 'Leather Armor', '#' %></p>
 
-<h2>Normais:</h2>
+<h2>Weapons:</h2>
+<p><%= link_to 'Heavy Axe', '#' %></p>
+<p><%= link_to 'Double Axe', '#' %></p>
+<p><%= link_to 'Low Crossbow', '#' %></p>
+<p><%= link_to 'Blade', '#' %></p>
+<p><%= link_to 'Mace', '#' %></p>
+<p><%= link_to 'Dagger', '#' %></p>
+<p><%= link_to 'Pistol', '#' %></p>
 
-<h2>Upgrades:</h2>
-
-<h2>Epicos:</h2>
-
-<h2>Lendarios:</h2>
+<h2>Protection:</h2>
+<p><%= link_to 'Light Shield', '#' %></p>
