new player done

--- a/app/views/rpg/_city.html.erb
+++ b/app/views/rpg/_city.html.erb
@@ -32,7 +32,7 @@
 
       <span class="label label-warning"><%= image_tag("battle-gear.png", size: "50x40", title: "Shop") %><%= link_to 'Shop', shop_path %></span>
       <span class="label label-success"><%= image_tag("strong.png", size: "50x40", title: "Jungle") %><%= link_to 'Jungle', shop_path %></span>
-      <span class="label label-danger"><%= image_tag("pyromaniac.png", size: "50x40", title: "Targets") %><%= link_to 'Targets', shop_path %></span>
+      <span class="label label-danger"><%= image_tag("pyromaniac.png", size: "50x40", title: "Targets") %><%= link_to 'Targets', targets_path %></span>
 
     </div>
     </h1>
