--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@ $gray-medium-light: #E7E3E3;
 
 body {
   padding-top: 30px;
-  background-color: #E7E6E6;
+  background-color: white;
 }
 
 section {
@@ -53,7 +53,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #E7E3E3;
+  color: #787878;
 }
 
 p {
