--- a/app/views/admin_panel/index.html.erb
+++ b/app/views/admin_panel/index.html.erb
@@ -1,3 +1,13 @@
 <h1>NEW ITEM</h1>
-
+<%= form_for @item do |f| -%>
+  <%= f.label :name, "Name" %>
+  <%= f.text_field :name %>
+  <%= f.label :name, "Name" %>
+  <%= f.text_field :name %>
+  <%= f.label :name, "Name" %>
+  <%= f.text_field :name %>
+  <%= f.label :name, "Name" %>
+  <%= f.text_field :name %>
+  
+<% end -%>
 <h1>BAN PLAYER</h1>
