--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,11 @@
               <%= link_to "Log out", signout_path, method: "delete" %>
             </li>
           </ul>
+          <% unless !current_user.admin %>
+            <li><%= link_to "admin_panel", admin_panel_path %></li>
+          <% end %>
         </li>
+
       <% else %>
         <li><%= link_to "Sign in", signin_path %></li>
         <li><%= link_to "Sign Up", signup_path %></li>
