stable new items

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,7 +68,7 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 3.0em;
-  color: white;
+  color: #A5A5A5;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-top: 15px;
