--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -8,16 +8,21 @@
     <thead>
       <td></td>
       <td>Name</td>
-      <td>Price</td>
       <td>Defense</td>
+      <td>Price</td>
       <td>Description</td>
       <td>Purchase</td>
     </thead>
     <tr>
       <td><%= image_tag("#{a.image_path}.png", size: "50x50") %></td>
-      <td><%= a.name %></td>
+      <% if current_user.player.armor && current_user.player.armor.name == a.name %>
+        <td><%= "#{a.name} (UPGRADE)" %></td>
+        <td><%= (a.defense)*0.2 %></td>  
+      <% else %>
+        <td><%= a.name %></td>
+        <td><%= a.defense %></td>
+      <% end %>
       <td><%= a.price %></td>
-      <td><%= a.defense %></td>      
       <td><%= a.description %></td>
       <td><%= link_to "Purchase this item",  { :controller => 'shop', :action => 'purchase_item', :id => a.id } %></td>
     </tr>
@@ -30,16 +35,21 @@
     <thead>
       <td></td>
       <td>Name</td>
-      <td>Price</td>
       <td>Damage</td>
+      <td>Price</td>
       <td>Description</td>
       <td>Purchase</td>
     </thead>
     <tr>
       <td><%= image_tag("#{w.image_path}.png", size: "50x50") %></td>
-      <td><%= w.name %></td>
+      <% if current_user.player.weapon && current_user.player.weapon.name == w.name %>
+        <td><%= "#{w.name} (UPGRADE)" %></td>
+        <td><%= (w.damage)*0.2 %></td>  
+      <% else %>
+        <td><%= w.name %></td>
+        <td><%= w.damage %></td>
+      <% end %>
       <td><%= w.price %></td>
-      <td><%= w.damage %></td>      
       <td><%= w.description %></td>
       <td><%= link_to "Purchase this item",  { :controller => 'shop', :action => 'purchase_item', :id => w.id } %></td>
     </tr>
@@ -52,16 +62,21 @@
     <thead>
       <td></td>
       <td>Name</td>
-      <td>Price</td>
       <td>Defense</td>
+      <td>Price</td>
       <td>Description</td>
       <td>Purchase</td>
     </thead>
     <tr>
       <td><%= image_tag("#{h.image_path}.png", size: "50x50") %></td>
-      <td><%= h.name %></td>
+      <% if current_user.player.helm && current_user.player.helm.name == h.name %>
+        <td><%= "#{h.name} (UPGRADE)" %></td>
+        <td><%= (h.defense)*0.2 %></td>  
+      <% else %>
+        <td><%= h.name %></td>
+        <td><%= h.defense %></td>
+      <% end %>
       <td><%= h.price %></td>
-      <td><%= h.defense %></td>      
       <td><%= h.description %></td>
       <td><%= link_to "Purchase this item",  { :controller => 'shop', :action => 'purchase_item', :id => h.id } %></td>
     </tr>
