fixed cosmetic item bug

--- a/app/views/shared/_cosmetic_item_form.html.erb
+++ b/app/views/shared/_cosmetic_item_form.html.erb
@@ -16,6 +16,6 @@
     <label><%= f.radio_button(:cosmetic_type, "Armor") %>Armor</label><br>
     <label><%= f.radio_button(:cosmetic_type, "Weapon") %>Weapon</label><br>
     <label><%= f.radio_button(:cosmetic_type, "Helm") %>Helm</label><br>
-  </div> 
-  <%= f.submit "CosmeticItem", class: "btn btn-primary" %>
+  </div>
+  <%= f.submit "New Item", class: "btn btn-primary" %>
 <% end %>
