battle stuff done

--- a/app/views/admin_panel/index.html.erb
+++ b/app/views/admin_panel/index.html.erb
@@ -3,3 +3,6 @@
   <%= render 'shared/cosmetic_item_form' %>
 </center>
 <h1>BAN PLAYER</h1>
+
+<h1>New Match</h1>
+<%= link_to "New Match", admin_new_match_path, class: "btn btn-default" %>
