--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Avaible gold: <%= current_user.player.gold %>
+  Avaible gold: <%= current_user.last_player.gold %>
 </h1>
 
 <h1>Armors:</h1>
