--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,17 +1,17 @@
-<% if current_user.player.playable? %>
+<% if current_user.players.last.playable? %>
   <div class="stats_container">
     <br>
-    <center><h2><%= current_user.player.state %></h2></center>
+    <center><h2><%= current_user.last_player.state %></h2></center>
     <div class="row">
-      <div class="col-md-3">        
+      <div class="col-md-3">
       </div>
       <div class="col-md-6">
         <div class="progress" title="Max HP">
-          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= current_user.player.hp_min %>%;" title="Current HP">            
+          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= current_user.last_player.hp_min %>%;" title="Current HP">
           </div>
         </div>
         <div class="progress" title="Max MP">
-          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= current_user.player.mp_in_percentage %>%;" title="Current MP">            
+          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= current_user.last_player.mp_in_percentage %>%;" title="Current MP">
           </div>
         </div>
 
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <br>      
+    <br>
   </div>
 <% else %>
   <h1>CREATE YOUR CHARACTER</h1>
